--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,26 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+body::-webkit-scrollbar-track {
+  background: rbga(0, 0, 0, 0);
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+  border-radius: 10px;
+  margin-right: 0.1em;
+}
+
+body::-webkit-scrollbar {
+  width: 0.75em;
+}
+body::-webkit-scrollbar-thumb {
+  display: var(--display);
+  border-radius: 10px;
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+  background-color: orange;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
