--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Fira Code";
+}
+:root {
+  --main_bg_color: #1d1142;
+  --main_text_color: #000000;
+  --main_btn_color: #2db7f5;
+  --light-blue-color: #2db7f5;
 }
 body {
   margin: 0;
@@ -10,6 +17,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--main_bg_color);
 }
 body {
   overflow-x: hidden;
@@ -23,13 +31,12 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar {
-  width: 0.75em;
+  width: 0.5em;
 }
 body::-webkit-scrollbar-thumb {
-  display: var(--display);
   border-radius: 10px;
   /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
-  background-color: orange;
+  background-color: var(--light-blue-color);
 }
 
 code {
